--- a/css/styles.css
+++ b/css/styles.css
@@ -1,47 +1,308 @@
-body {
-    font-family: 'Lato', sans-serif;
-}
-
-
-/* Globales */
-
-.contenedor {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-
-/*header */
-
-.site-header.inicio {
-    background-image: url(../img/header.jpg);
-    background-position: center center;
-    background-size: cover;
-    height: 100vh;
-    min-height: 600px;
-}
-
-.barra {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 30px;
-}
-
-
-/* navegación */
-
-.navegacion a {
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    margin-right: 20px;
-}
-
-.navegacion a:hover {
-    color: #71b100;
-}
-
-.navegacion a:last-of-type {
-    margin-right: 0;
-}
+    html {
+        box-sizing: border-box;
+        font-size: 62.5%;
+        /*Reset de rem */
+    }
+    
+    *,
+    *:before,
+    *:after {
+        box-sizing: inherit;
+    }
+    
+    body {
+        font-family: 'Lato', sans-serif;
+        font-size: 1.6rem;
+        line-height: 2;
+    }
+    /* Globales */
+    
+    img {
+        max-width: 100%;
+    }
+    
+    .contenedor {
+        max-width: 120rem;
+        margin: 0 auto;
+    }
+    
+    h1 {
+        font-size: 3.8rem;
+    }
+    
+    h2 {
+        font-size: 3.4rem;
+    }
+    
+    h3 {
+        font-size: 3rem;
+    }
+    
+    h4 {
+        font-size: 2.6rem;
+    }
+    /* Utilidades */
+    
+    .seccion {
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+    }
+    
+    .fw-300 {
+        font-weight: 300;
+    }
+    
+    .centrar-texto {
+        text-align: center;
+    }
+    
+    .d-block {
+        display: block!important;
+    }
+    /*Botones*/
+    
+    .boton {
+        color: #ffffff;
+        font-weight: 700;
+        text-decoration: none;
+        font-size: 1.8rem;
+        padding: 1rem 3rem;
+        margin-top: 3rem;
+        display: inline-block;
+        text-align: center;
+    }
+    
+    .boton-amarillo {
+        background-color: #E08709;
+    }
+    
+    .boton-verde {
+        background-color: #71b100;
+    }
+    /*header */
+    
+    .site-header.inicio {
+        background-image: url(../img/header.jpg);
+        background-position: center center;
+        background-size: cover;
+        height: 100vh;
+        min-height: 60rem;
+    }
+    
+    .contenido-header {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    
+    .contenido-header h1 {
+        color: #ffffff;
+        padding-bottom: 2rem;
+        max-width: 60rem;
+        line-height: 2;
+    }
+    
+    .barra {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 3rem;
+    }
+    /* navegación */
+    
+    .navegacion a {
+        color: white;
+        text-decoration: none;
+        font-size: 1.8rem;
+        margin-right: 2rem;
+    }
+    
+    .navegacion a:hover {
+        color: #71b100;
+    }
+    
+    .navegacion a:last-of-type {
+        margin-right: 0;
+    }
+    /*iconos-nosotros*/
+    
+    .iconos-nosotros {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .icono {
+        flex-basis: calc( 33.3% - 1rem);
+        text-align: center;
+    }
+    
+    .icono h3 {
+        text-transform: uppercase;
+    }
+    /* anuncios */
+    
+    .contenedor-anuncios {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .anuncio {
+        flex-basis: calc(33.3% - 1rem);
+        border: 1px solid #B5B5B5;
+        background-color: #F5F5F5;
+    }
+    
+    .contenido-anuncio {
+        padding: 2rem;
+    }
+    
+    .contenido-anuncio h3,
+    .contenido-anuncio p {
+        margin: 0;
+    }
+    
+    .precio {
+        color: #71B100;
+        font-weight: 700;
+    }
+    
+    .iconos-caracteristicas {
+        list-style: none;
+        padding: 0;
+        display: flex;
+        justify-content: space-evenly;
+    }
+    
+    .iconos-caracteristicas li {
+        display: flex;
+    }
+    
+    .iconos-caracteristicas li img {
+        margin-right: 2rem;
+    }
+    
+    .ver-todas {
+        display: flex;
+        justify-content: flex-end;
+    }
+    /* Contacto Home */
+    
+    .imagen-contacto {
+        background-image: url(../img/encuentra.jpg);
+        background-position: center center;
+        background-size: cover;
+        height: 40rem;
+        display: flex;
+        align-items: center;
+    }
+    
+    .contenido-contacto {
+        flex: 1;
+        color: #ffffff;
+    }
+    
+    .contenido-contacto p {
+        font-size: 1.8rem;
+    }
+    /* sección inferior */
+    
+    .seccion-inferior {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .seccion-inferior .blog {
+        flex-basis: 60%;
+    }
+    
+    .seccion-inferior .testimoniales {
+        flex-basis: calc(40% - 2rem);
+    }
+    
+    .entrada-blog {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 2rem;
+    }
+    
+    .entrada-blog:last-of-type {
+        margin-bottom: 0;
+    }
+    
+    .entrada-blog .imagen-contacto {
+        flex-basis: 40%;
+    }
+    
+    .entrada-blog .texto-entrada {
+        flex-basis: calc(60% - 3rem);
+        padding-left: 2rem;
+    }
+    
+    .texto-entrada a {
+        color: black;
+        text-decoration: none;
+    }
+    
+    .texto-entrada h4 {
+        margin: 0;
+        line-height: 1.4;
+    }
+    
+    .texto-entrada h4::after {
+        content: '';
+        display: block;
+        width: 15rem;
+        height: .5rem;
+        background-color: #71b100;
+        margin-top: 1rem;
+    }
+    
+    .texto-entrada span {
+        color: #E08709
+    }
+    /*testimoniales */
+    
+    .testimonial {
+        background-color: #71b100;
+        font-size: 2.4rem;
+        padding: 2rem;
+        color: #ffffff;
+        border-radius: 2rem;
+    }
+    
+    .testimonial p {
+        text-align: right;
+    }
+    
+    .testimonial blockquote::before {
+        content: '';
+        background-image: url(../img/comilla.svg);
+        width: 4rem;
+        height: 4rem;
+        position: absolute;
+        left: -2rem;
+    }
+    
+    .testimonial blockquote {
+        position: relative;
+        padding-left: 5rem;
+        font-weight: 300;
+    }
+    /* footer */
+    
+    .site-footer {
+        background-color: #333333;
+        margin: 0;
+    }
+    
+    .contenedor-footer {
+        padding: 3rem 0;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .copyright {
+        margin: 0;
+        color: #ffffff;
+    }
